--- a/index.html
+++ b/index.html
@@ -1,1 +1,547 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <title>Sylegro – Startseite</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Schrift Kiro -->
+  <link href="https://fonts.googleapis.com/css2?family=Kiro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    :root {
+      --sylegro-blue: #0063A5;
+      --sylegro-green: #17A863;
+      --bg-light: #f5f5f5;
+    }
+
+    body {
+      font-family: "Kiro", system-ui, -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: var(--bg-light);
+      color: #0f172a;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* HEADER */
+    header {
+      background: linear-gradient(to right, var(--sylegro-blue), var(--sylegro-green));
+      color: white;
+      padding: 18px 20px;
+    }
+
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+    .logo-area img {
+      height: 150px; /* LOGO GROSSER */
+      width: auto;
+      object-fit: contain;
+      display: block;
+      filter: drop-shadow(0 6px 16px rgba(15, 23, 42, 0.5));
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    nav a {
+      color: white;
+      font-size: 0.98rem;
+      font-weight: 500;
+      position: relative;
+      padding-bottom: 3px;
+    }
+
+    nav a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 2px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 999px;
+      transition: width .18s ease-out;
+    }
+
+    nav a:hover::after {
+      width: 100%;
+    }
+
+    /* MAIN LAYOUT */
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 24px 20px 32px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: minmax(0, 2fr) minmax(0, 1.5fr);
+      gap: 22px;
+      align-items: stretch;
+      margin-bottom: 24px;
+    }
+
+    @media (max-width: 900px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+      .header-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      nav {
+        justify-content: flex-start;
+      }
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 18px;
+      padding: 22px 22px 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      border-top: 4px solid var(--sylegro-blue);
+      height: 100%;
+    }
+
+    h1, h2, h3 {
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 0.98rem;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+
+    /* SLIDER */
+    .slider {
+      position: relative;
+    }
+
+    .slider-image-wrapper {
+      position: relative;
+      overflow: hidden;
+      border-radius: 14px;
+      margin-bottom: 12px;
+    }
+
+    #service-image {
+      width: 100%;
+      max-height: 280px;
+      object-fit: cover;
+      border-radius: 14px;
+      opacity: 1;
+      transition: opacity 0.4s ease;
+      display: block;
+    }
+
+    .slider-title {
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin-bottom: 4px;
+      color: var(--sylegro-blue);
+    }
+
+    .slider-text {
+      font-size: 0.95rem;
+      color: #374151;
+      margin-bottom: 10px;
+    }
+
+    .slider-dots {
+      display: flex;
+      gap: 8px;
+      margin-top: 8px;
+      align-items: center;
+    }
+
+    .dot {
+      width: 11px;
+      height: 11px;
+      border-radius: 999px;
+      border: 1px solid #9ca3af;
+      cursor: pointer;
+      background: transparent;
+      transition: background 0.15s ease, border-color 0.15s ease, transform 0.15s ease;
+    }
+
+    .dot.active {
+      background: var(--sylegro-green);
+      border-color: var(--sylegro-green);
+      transform: scale(1.1);
+    }
+
+    /* Slider-Pfeile */
+    .slider-nav {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+
+    .slider-arrow {
+      pointer-events: auto;
+      background: rgba(255, 255, 255, 0.9);
+      border: none;
+      border-radius: 999px;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.15);
+      cursor: pointer;
+      font-size: 16px;
+      color: #374151;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
+    }
+
+    .slider-arrow:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 6px 14px rgba(15, 23, 42, 0.18);
+      background: #ffffff;
+    }
+
+    /* QUICK LINKS / KACHELN */
+    .quick-links {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 22px;
+      margin-top: 10px;
+      align-items: stretch;
+    }
+
+    .quick-links .tile {
+      border-radius: 18px;
+      padding: 20px 20px 18px;
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.06);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.08),
+        rgba(23, 168, 99, 0.08)
+      );
+      border: 1px solid rgba(148, 163, 184, 0.25);
+      transition: transform 0.18s ease, box-shadow 0.18s ease,
+                  background 0.18s ease, border-color 0.18s ease;
+      height: 100%;
+    }
+
+    .quick-links .tile:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 14px 30px rgba(15, 23, 42, 0.12);
+      background: linear-gradient(135deg,
+        rgba(0, 99, 165, 0.14),
+        rgba(23, 168, 99, 0.16)
+      );
+      border-color: rgba(37, 99, 235, 0.3);
+    }
+
+    .quick-links h3 {
+      margin-bottom: 6px;
+      font-size: 1.05rem;
+    }
+
+    .quick-links p {
+      margin: 0;
+      font-size: 0.94rem;
+      color: #374151;
+    }
+
+    /* WAS UNS AUSZEICHNET */
+    .excellence-card {
+      margin-top: 10px;
+    }
+
+    .excellence-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 24px;
+      margin-top: 16px;
+    }
+
+    .excellence-item {
+      padding: 10px 6px 0 6px;
+      border-left: 3px solid var(--sylegro-green);
+    }
+
+    .excellence-item h3 {
+      margin-top: 0;
+      margin-bottom: 6px;
+      color: var(--sylegro-green);
+      font-size: 1.1rem;
+    }
+
+    .excellence-item p {
+      margin: 0;
+      color: #4b5563;
+      font-size: 0.95rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 18px 20px 26px;
+      font-size: 0.85rem;
+      color: #6b7280;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <div class="header-inner">
+      <div class="logo-area">
+        <img src="logo-header.jpg" alt="Sylegro Logo mit Claim">
+      </div>
+
+      <nav>
+        <a href="index.html">Startseite</a>
+        <a href="dienstleistungen.html">Dienstleistungen</a>
+        <a href="ueber-uns.html">Über uns</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="kontakt.html">Kontakt</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main>
+
+    <!-- Grid: Text + Slider -->
+    <section class="grid">
+      <!-- Willkommen-Text -->
+      <div class="card">
+        <p>
+          Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
+          Unser Name steht für Qualität, Flexibilität und transparente Lösungen, die individuell auf
+          Ihre Bedürfnisse zugeschnitten sind.
+        </p>
+        <p>
+          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
+          ein umfassendes Dienstleistungspaket, das höchsten Standards gerecht wird. Unser erfahrenes
+          Team sorgt dafür, dass Ihre Räumlichkeiten stets sauber, gepflegt und einladend sind – für ein
+          optimales Arbeits- und Wohnumfeld.
+        </p>
+      </div>
+
+      <!-- Slider -->
+      <div class="card slider">
+        <h2>Unsere Kernleistungen</h2>
+        <div class="slider-image-wrapper">
+          <img id="service-image" src="" alt="Dienstleistung">
+          <div class="slider-nav">
+            <button class="slider-arrow" id="prev-slide">&#10094;</button>
+            <button class="slider-arrow" id="next-slide">&#10095;</button>
+          </div>
+        </div>
+        <div class="slider-title" id="service-title"></div>
+        <div class="slider-text" id="service-text"></div>
+        <div class="slider-dots" id="slider-dots"></div>
+      </div>
+    </section>
+
+    <!-- Vision -->
+    <section class="card">
+      <h2>Unsere Vision</h2>
+      <p><strong>Wir gestalten die Zukunft der Gebäudereinigung – digital, nachhaltig und effizient.</strong></p>
+      <p>
+        Mit innovativen Technologien, umweltfreundlichen Reinigungsmethoden und klar definierten Prozessen
+        setzen wir neue Massstäbe in der Branche. Unsere digitalen Lösungen sorgen für maximale Transparenz
+        und Effizienz, während nachhaltige Verfahren den Werterhalt Ihrer Immobilie sichern.
+      </p>
+    </section>
+
+    <!-- Was uns auszeichnet (ohne Emojis) -->
+    <section class="card excellence-card">
+      <h2>Was uns auszeichnet</h2>
+      <div class="excellence-grid">
+        <div class="excellence-item">
+          <h3>Qualitätsorientiert</h3>
+          <p>
+            Wir garantieren Ihnen die gewünschte Qualität durch unser bewährtes Qualitätsmanagement. 
+            Jedes Detail wird kontinuierlich überprüft und optimiert, um Ergebnisse zu liefern, 
+            die Ihre Erwartungen übertreffen.
+          </p>
+        </div>
+        <div class="excellence-item">
+          <h3>Erfahrung &amp; Know-How</h3>
+          <p>
+            Mit langjähriger Erfahrung und fundiertem Fachwissen garantieren wir Ihnen professionelle 
+            Lösungen, die auf bewährten Methoden und stetiger Weiterentwicklung basieren.
+          </p>
+        </div>
+        <div class="excellence-item">
+          <h3>Flexibel</h3>
+          <p>
+            Unsere Dienstleistungen sind so flexibel wie Ihre Bedürfnisse. Wir passen uns Ihren 
+            Anforderungen an und bieten massgeschneiderte Lösungen, wann immer Sie sie benötigen.
+          </p>
+        </div>
+        <div class="excellence-item">
+          <h3>Transparent</h3>
+          <p>
+            Wir legen grossen Wert auf klare Kommunikation. Sie wissen immer genau, wie wir arbeiten, 
+            warum wir bestimmte Massnahmen ergreifen und wie diese zu den besten Ergebnissen führen.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Quick Links -->
+    <section class="quick-links">
+      <a href="dienstleistungen.html">
+        <div class="tile">
+          <h3>Unsere Dienstleistungen</h3>
+          <p>Unterhaltsreinigung, Spezialreinigung &amp; Hauswartung im Überblick.</p>
+        </div>
+      </a>
+      <a href="ueber-uns.html">
+        <div class="tile">
+          <h3>Über uns</h3>
+          <p>Die Menschen und Werte hinter Sylegro.</p>
+        </div>
+      </a>
+      <a href="jobs.html">
+        <div class="tile">
+          <h3>Jobs</h3>
+          <p>Werde Teil unseres Teams.</p>
+        </div>
+      </a>
+      <a href="kontakt.html">
+        <div class="tile">
+          <h3>Kontakt</h3>
+          <p>Wir freuen uns auf Ihre Anfrage.</p>
+        </div>
+      </a>
+    </section>
+
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    © Sylegro <span id="year"></span>
+  </footer>
+
+  <!-- Slider-Logik -->
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+
+    const services = [
+      {
+        title: "Unterhaltsreinigung",
+        text: "Regelmässige Reinigung von Büros, Liegenschaften und Gewerbeflächen – sauber, zuverlässig und strukturiert.",
+        image: "Titelbildmitlogo.jpg"
+      },
+      {
+        title: "Spezialreinigung",
+        text: "Tiefenreinigungen, Glas- und Fassadenreinigung, Bau- und Umzugsreinigung für besondere Anforderungen.",
+        image: "AdobeStock_482143067.jpeg"
+      },
+      {
+        title: "Hauswartung",
+        text: "Umfassende Betreuung Ihrer Liegenschaft: Technik, Pflege der Aussenanlagen und Werterhaltung aus einer Hand.",
+        image: "DSC_6486.JPG"
+      }
+    ];
+
+    const img = document.getElementById("service-image");
+    const title = document.getElementById("service-title");
+    const text = document.getElementById("service-text");
+    const dots = document.getElementById("slider-dots");
+    const prevBtn = document.getElementById("prev-slide");
+    const nextBtn = document.getElementById("next-slide");
+
+    const prev = document.getElementById("prev-slide");
+    const next = document.getElementById("next-slide");
+
+    let current = 0;
+
+    function renderDots() {
+      dots.innerHTML = "";
+      services.forEach((_, i) => {
+        const dot = document.createElement("div");
+        dot.className = "dot" + (i === current ? " active" : "");
+        dot.onclick = () => {
+          current = i;
+          updateSlider(true);
+        };
+        dots.appendChild(dot);
+      });
+    }
+
+    function updateSlider(withFade) {
+      const s = services[current];
+
+      if (withFade) {
+        img.style.opacity = 0;
+        setTimeout(() => {
+          img.src = s.image;
+          img.alt = s.title;
+          title.textContent = s.title;
+          text.textContent = s.text;
+          renderDots();
+          img.style.opacity = 1;
+        }, 200);
+      } else {
+        img.src = s.image;
+        img.alt = s.title;
+        title.textContent = s.title;
+        text.textContent = s.text;
+        renderDots();
+      }
+    }
+
+    document.getElementById("prev-slide").addEventListener("click", () => {
+      current = (current - 1 + services.length) % services.length;
+      updateSlider(true);
+    });
+
+    document.getElementById("next-slide").addEventListener("click", () => {
+      current = (current + 1) % services.length;
+      updateSlider(true);
+    });
+
+    setInterval(() => {
+      current = (current + 1) % services.length;
+      updateSlider(true);
+    }, 6000);
+
+    updateSlider(false);
+  </script>
+
+</body>
+</html>
