--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
       nav {
         justify-content: flex-start;
       }
+
+      /* auf kleinen Screens 1 Spalte für Was uns auszeichnet */
+      .excellence-grid {
+        grid-template-columns: 1fr;
+      }
     }
 
     .card {
@@ -287,7 +292,8 @@
 
     .excellence-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      /* feste 2 Spalten -> Flexibel unter Erfahrung & rechts von Transparent */
+      grid-template-columns: repeat(2, minmax(0, 1fr));
       gap: 24px;
       margin-top: 16px;
     }
@@ -341,24 +347,9 @@
   <!-- MAIN -->
   <main>
 
-    <!-- Grid: Text + Slider -->
+    <!-- Grid: Slider + Text (getauscht) -->
     <section class="grid">
-      <!-- Willkommen-Text -->
-      <div class="card">
-        <p>
-          Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
-          Unser Name steht für Qualität, Flexibilität und transparente Lösungen, die individuell auf
-          Ihre Bedürfnisse zugeschnitten sind.
-        </p>
-        <p>
-          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
-          ein umfassendes Dienstleistungspaket, das höchsten Standards gerecht wird. Unser erfahrenes
-          Team sorgt dafür, dass Ihre Räumlichkeiten stets sauber, gepflegt und einladend sind – für ein
-          optimales Arbeits- und Wohnumfeld.
-        </p>
-      </div>
-
-      <!-- Slider -->
+      <!-- Slider links -->
       <div class="card slider">
         <h2>Unsere Kernleistungen</h2>
         <div class="slider-image-wrapper">
@@ -371,6 +362,21 @@
         <div class="slider-title" id="service-title"></div>
         <div class="slider-text" id="service-text"></div>
         <div class="slider-dots" id="slider-dots"></div>
+      </div>
+
+      <!-- Willkommen-Text rechts -->
+      <div class="card">
+        <p>
+          Sylegro, Ihr zuverlässiger Partner für professionelle Reinigungs- und Hauswartungsdienste.
+          Unser Name steht für Qualität, Flexibilität und transparente Lösungen, die individuell auf
+          Ihre Bedürfnisse zugeschnitten sind.
+        </p>
+        <p>
+          Mit klarem Fokus auf Unterhaltsreinigung, Spezialreinigung und Hauswartung bieten wir Ihnen
+          ein umfassendes Dienstleistungspaket, das höchsten Standards gerecht wird. Unser erfahrenes
+          Team sorgt dafür, dass Ihre Räumlichkeiten stets sauber, gepflegt und einladend sind – für ein
+          optimales Arbeits- und Wohnumfeld.
+        </p>
       </div>
     </section>
 
@@ -385,7 +391,7 @@
       </p>
     </section>
 
-    <!-- Was uns auszeichnet (ohne Emojis) -->
+    <!-- Was uns auszeichnet -->
     <section class="card excellence-card">
       <h2>Was uns auszeichnet</h2>
       <div class="excellence-grid">
@@ -404,18 +410,20 @@
             Lösungen, die auf bewährten Methoden und stetiger Weiterentwicklung basieren.
           </p>
         </div>
-        <div class="excellence-item">
-          <h3>Flexibel</h3>
-          <p>
-            Unsere Dienstleistungen sind so flexibel wie Ihre Bedürfnisse. Wir passen uns Ihren 
-            Anforderungen an und bieten massgeschneiderte Lösungen, wann immer Sie sie benötigen.
-          </p>
-        </div>
+        <!-- Transparent zuerst in Reihe 2 -->
         <div class="excellence-item">
           <h3>Transparent</h3>
           <p>
             Wir legen grossen Wert auf klare Kommunikation. Sie wissen immer genau, wie wir arbeiten, 
             warum wir bestimmte Massnahmen ergreifen und wie diese zu den besten Ergebnissen führen.
+          </p>
+        </div>
+        <!-- Flexibel rechts von Transparent (Reihe 2, Spalte 2) -->
+        <div class="excellence-item">
+          <h3>Flexibel</h3>
+          <p>
+            Unsere Dienstleistungen sind so flexibel wie Ihre Bedürfnisse. Wir passen uns Ihren 
+            Anforderungen an und bieten massgeschneiderte Lösungen, wann immer Sie sie benötigen.
           </p>
         </div>
       </div>
@@ -482,11 +490,6 @@
     const title = document.getElementById("service-title");
     const text = document.getElementById("service-text");
     const dots = document.getElementById("slider-dots");
-    const prevBtn = document.getElementById("prev-slide");
-    const nextBtn = document.getElementById("next-slide");
-
-    const prev = document.getElementById("prev-slide");
-    const next = document.getElementById("next-slide");
 
     let current = 0;
 
